# temp-kiosk

./: .gitignore  README.md  meson.build  pull-rebuild.sh  temp_kiosk.c
src/: logger.c  logger.h  logger_cli.c
src/client/: neuroslop.html
src/logger/: logger.c  logger.h  logger_cli.c
src/temp_emulator/: emulator.c
src/temp_logger/: logger_db.c  logger_fs.c  logger_interface.h  temp_logger.c  temp_logger.h  temp_server.c
subprojects/cross_utils/: cross_bg.c  cross_bg.h  cross_mem.h  cross_process.h  cross_socket.h  cross_time.c  cross_time.h  linux_mem.c  linux_time.c  meson.build  my_types.h  str_utils.h  test1.c  utils.c  utils.h  win_bg.c  win_mem.c  win_time.c
subprojects/cross_utils/linux/: linux_bg.c  linux_mem.c  linux_process.c  linux_time.c
subprojects/cross_utils/posix/: posix_mem.c  posix_socket.c
subprojects/cross_utils/tests/: test1.c
subprojects/cross_utils/utils/: file_utils.c  file_utils.h  files_utils.c  files_utils.h  my_types.h  str_utils.c  str_utils.h
subprojects/cross_utils/win/: win_mem.c  win_process.c  win_socket.c  win_time.c
subprojects/crossbg/: crossbg.c  crossbg.h  meson.build  my_time.c  my_time.h  my_types.h  test1.c
